<resources>
    <string name="app_name">My Folio</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="title_tutorial_1">Store all your financial information &amp; stay secure</string>
    <string name="description_tutorial_1">Right from your assets to your insurance.</string>
    <string name="title_tutorial_2">Nominate A Person</string>
    <string name="description_tutorial_2">Share and control your nominee\'s access.</string>
    <string name="title_tutorial_3">90 Day Free Trial</string>
    <string name="description_tutorial_3">Enjoy Your 90 Day Free Trial</string>
    <string name="title_tutorial_4">Stay Secure with us</string>
    <string name="description_tutorial_4">All data is secured with a 256-bit AES encryption standard &amp; uploaded to a secure cloud. All data is tokenized so that only you and your nominee has access.</string>
    <string name="lets_get">Let’s Get</string>
    <string name="organized">Organized</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="my_folio">My Folio</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="onboarding_intro_desc">Get organised! - Plan, Prevent and Protect.</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="signup_otp_instr">An OTP will be sent to you on this email id. You cannot change or edit this email id once registered.</string>
    <string name="signup_email_share_instr">Note - Your email id will not be shared.</string>
    <string name="already_on_myfolio">Already have an account?</string>
    <string name="enter_registered_email_id">Enter Registered Email ID</string>
    <string name="login_otp_instr">An OTP will be sent to your registered email ID</string>
    <string name="new_to_myfolio">New to MyFolio?</string>
    <string name="sign_up_otp">Sign Up OTP</string>
    <string name="signup_otp_verfiy_instr">You will receive your OTP on your registered email Id</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="your_otp_will_expire_in">Your OTP will expire in </string>
    <string name="authorise">Authorise</string>
    <string name="terms_and_conditions">terms and conditions</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="enter_full_name"><![CDATA[Full Name<font color=#FF0000>*</font>]]></string>
    <string name="enter_mobile_number"><![CDATA[Mobile Number<font color=#FF0000>*</font>]]></string>
    <string name="enter_date_of_birth"><![CDATA[Date of Birth<font color=#FF0000></font>]]></string>
    <string name="enter_gender"><![CDATA[Gender<font color=#FF0000></font>]]></string>
    <string name="enter_country_of_residence"><![CDATA[Country Of Residence<font color=#FF0000>*</font>]]></string>
    <string name="complete_registration">Complete Registration</string>
    <string name="log_in_otp">Log In OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="alert_msg_invalid_email">Please enter valid email ID</string>
    <string name="msg_loading">Loading…</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="msg_enter_valid_details">Please add mandatory fields</string>
    <string name="pref_logged_in_user">pref_logged_in_user</string>
    <string name="pref_logged_in_user_token">pref_logged_in_user_token</string>
    <string name="txt_myfolio_logo"><![CDATA[My<b>Folio</b>\u2122]]></string>
    <string name="categories">Categories</string>
    <string name="welcome">Welcome,</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="customer_id">Customer ID</string>
    <string name="relationship_manager">Relationship Manager</string>
    <string name="comment">Comment</string>
    <string name="attachment">Attachment</string>
    <string name="bank_account">Bank Account</string>
    <string name="add_type_of_account"><![CDATA[Type Of Account<font color=#FF0000>*</font>]]></string>
    <string name="add_acc_holder_name"><![CDATA[Account Holder Name<font color=#FF0000>*</font>]]></string>
    <string name="add_bank_name"><![CDATA[Bank Name<font color=#FF0000>*</font>]]></string>
    <string name="add_branch_name"><![CDATA[Branch Name<font color=#FF0000>*</font>]]></string>
    <string name="add_bank_acc_number"><![CDATA[Bank Account Number(Last 4 digits)<font color=#FF0000>*</font>]]></string>
    <string name="add_ifsc_code"><![CDATA[IFSC Code<font color=#FF0000></font>]]></string>
    <string name="add_customer_id"><![CDATA[Customer ID<font color=#FF0000></font>]]></string>
    <string name="add_relationship_manager"><![CDATA[Relationship Manager<font color=#FF0000></font>]]></string>
    <string name="add_comment">Add Comment</string>
    <string name="add_share_now">Share Now</string>
    <string name="yes">Yes</string>
    <string name="save">Save</string>
    <string name="saving">Saving</string>
    <string name="current">Current</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="ok_label">OK</string>
    <string name="error_label">Error</string>
    <string name="photo_saved">Photo has been saved to Camera</string>
    <string name="lender_s_name">LENDER’S NAME</string>
    <string name="amount_lend">AMOUNT LEND</string>
    <string name="deadline">DEADLINE</string>
    <string name="borrowed_from">BORROWED FROM</string>
    <string name="contact_details">CONTACT DETAILS</string>
    <string name="balance_to_pay">BALANCE TO PAY</string>
    <string name="amount_borrowed">AMOUNT BORROWED</string>
    <string name="interest_applicable">INTEREST APPLICABLE</string>
    <string name="personal_ious">Personal IOUs</string>
    <string name="borrowed">Borrowed</string>
    <string name="lend">Lent</string>
    <string name="add">Add</string>
    <string name="add_lender_im_the"><![CDATA[ I Am The…<font color=#FF0000></font>]]></string>
    <string name="add_lender_reason_for_lending"><![CDATA[Reason For Lending<font color=#FF0000>*</font>]]></string>
    <string name="add_borrower_reason_for_borrowing"><![CDATA[Reason For Borrowing<font color=#FF0000>*</font>]]></string>
    <string name="add_lender_borrower_name"><![CDATA[Borrower\'s Name<font color=#FF0000>*</font>]]></string>
    <string name="add_borrower_lender_name"><![CDATA[Lender\'s Name<font color=#FF0000>*</font>]]></string>
    <string name="add_lender_total_amount"><![CDATA[Total Amount Lended<font color=#FF0000>*</font>]]></string>
    <string name="add_lender_currency"><![CDATA[Currency<font color=#FF0000></font>]]></string>
    <string name="add_lender_amount_returned"><![CDATA[Amount Returned<font color=#FF0000></font>]]></string>
    <string name="add_lender_amount_pending"><![CDATA[Pending Amount<font color=#FF0000></font>]]></string>
    <string name="add_lender_deadline"><![CDATA[Deadline<font color=#FF0000></font>]]></string>
    <string name="borrower_s_name">Borrower\'s Name</string>
    <string name="active">Active</string>
    <string name="complete">Complete</string>
    <string name="loan">Loan</string>
    <string name="add_loan_type"><![CDATA[Type Of Loan<font color=#FF0000>*</font>]]></string>
    <string name="add_loan_purpose"><![CDATA[Purpose Of Loan<font color=#FF0000></font>]]></string>
    <string name="add_loan_inst_name"><![CDATA[Loan Institution Name<font color=#FF0000>*</font>]]></string>
    <string name="add_loan_acc_holder_name"><![CDATA[Account Holder Name<font color=#FF0000>*</font>]]></string>
    <string name="add_loan_account_number"><![CDATA[Loan Account Number<font color=#FF0000>*</font>]]></string>
    <string name="add_loan_amount"><![CDATA[Loan Amount<font color=#FF0000></font>]]></string>
    <string name="add_loan_emi_value"><![CDATA[EMI Value<font color=#FF0000></font>]]></string>
    <string name="add_loan_start_date"><![CDATA[Start Date<font color=#FF0000></font>]]></string>
    <string name="add_loan_end_date"><![CDATA[End Date<font color=#FF0000></font>]]></string>
    <string name="add_loan_status"><![CDATA[Status<font color=#FF0000></font>]]></string>
    <string name="select">Select</string>
    <string name="personal_information">Personal Information</string>
    <string name="logout">Logout</string>
    <string name="security">Security</string>
    <string name="nominee_nominator">Nominee / Nominator</string>
    <string name="language">Language</string>
    <string name="share_myfolio">Share MyFolio</string>
    <string name="delete_account">Delete Account</string>
    <string name="profile">Profile</string>
    <string name="on">On</string>
    <string name="pref_security_status">pref_security_status</string>
    <string name="pref_category_list">pref_category_list</string>
    <string name="off">Off</string>
    <string name="enable_touch_id">Enable Touch ID</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="add_new_loan">Add New Loan</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="card_limit">Card Limit</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="card">Card</string>
    <string name="add_card_type_of_account"><![CDATA[Card Type<font color=#FF0000>*</font>]]></string>
    <string name="add_card_institute_name"><![CDATA[Card Institution Name<font color=#FF0000>*</font>]]></string>
    <string name="add_card_number"><![CDATA[Card Number<font color=#FF0000>*</font>]]></string>
    <string name="add_card_expiry_date"><![CDATA[Expiry Date<font color=#FF0000></font>]]></string>
    <string name="add_card_limit"><![CDATA[Card limit<font color=#FF0000></font>]]></string>
    <string name="add_card">Add Card</string>
    <string name="d_o_b">D.O.B.</string>
    <string name="gender">Gender</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="aadhar_number">Aadhaar Number</string>
    <string name="relationship_with_nominee">Relationship With Nominee</string>
    <string name="nominee">My nominees</string>
    <string name="nominators">My nominators</string>
    <string name="add_nominee">Add Nominee</string>
    <string name="add_nominee_details">Add Nominee Details</string>
    <string name="add_nominee_name"><![CDATA[Nominee Name<font color=#FF0000>*</font>]]></string>
    <string name="add_nominee_dob"><![CDATA[Date Of Birth<font color=#FF0000>*</font>]]></string>
    <string name="add_nominee_gender"><![CDATA[Gender<font color=#FF0000>*</font>]]></string>
    <string name="add_nominee_mobile"><![CDATA[Mobile No.<font color=#FF0000>*</font>]]></string>
    <string name="add_nominee_email"><![CDATA[Email<font color=#FF0000>*</font>]]></string>
    <string name="add_nominee_otp">Add Nominee OTP</string>
    <string name="nominee_nominator_details">Nominee / Nominators Details</string>
    <string name="asset">Asset</string>
    <string name="add_insurace">Add Insurance</string>
    <string name="insurance">Insurance</string>
    <string name="add_contact">Add Contact</string>
    <string name="contact">Contact</string>
    <string name="subscription">Subscription</string>
    <string name="document">Document</string>
    <string name="add_document">Add Document</string>
    <string name="video_player">Video Player</string>
    <string name="investment">Investment</string>
    <string name="add_investment">Add Investment</string>
    <string name="delete_account_otp">Delete Account OTP</string>
</resources>